the second commit into master

--- a/views/article.pug
+++ b/views/article.pug
@@ -8,3 +8,4 @@ block content
     a.btn.btn-success( href = "/article/edit/" + article.id  ) Edit
     | 
     a.btn.btn-danger.delete-article(  data-id = article.id  ) Delete
+    //- day lay gi
