--- a/views/index.pug
+++ b/views/index.pug
@@ -6,3 +6,4 @@ block content
           each article in articles
             li.list-group-item
               a(href="/article/"+ article.id ) #{article.title}
+              //-sdfsdfsdfd
